updated theme name

--- a/content/themes/ac-inuk/style.css
+++ b/content/themes/ac-inuk/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: ac inuk
+Theme Name: MYNT APPS
 Theme URI: http://ac-inuk.wordpress-design/
 Author: Richard Arnold
 Author URI: http://ambercouch.co.uk/
