--- a/content/themes/ac-inuk/assets/scss/style.scss
+++ b/content/themes/ac-inuk/assets/scss/style.scss
@@ -31,6 +31,7 @@
 
 @import "ui/modules/site.scss";
 @import "ui/modules/header.scss";
+@import "ui/modules/header--master.scss";
 @import "ui/modules/branding.scss";
 @import "ui/modules/navigation.scss";
 @import "ui/modules/menu.scss";
