--- a/content/themes/ac-inuk/assets/css/style.css
+++ b/content/themes/ac-inuk/assets/css/style.css
@@ -3300,7 +3300,7 @@ h6, .zeta {
 }
 
 .site {
-  background: #ddd;
+  background: transparent;
 }
 
 .site__header--master {
@@ -3759,6 +3759,43 @@ removes max-widths from p that have no text node
 */
 .is-empty {
   max-width: none !important;
+}
+
+.vegas-loading {
+  border-radius: 10px;
+  background: #000;
+  background: rgba(0, 0, 0, 0.7);
+  background: url(/content/themes/ac-inuk/assets/images/vegas/loading.gif) no-repeat center center;
+  /* Loading Gif by http://preloaders.net/ */
+  height: 32px;
+  left: 20px;
+  position: fixed;
+  top: 20px;
+  width: 32px;
+  z-index: 0;
+}
+
+.vegas-overlay {
+  background: transparent url(/content/themes/ac-inuk/assets/images/vegas/overlays/01.png);
+  opacity: 0.5;
+  z-index: -1;
+}
+
+.vegas-background {
+  -ms-interpolation-mode: bicubic;
+  image-rendering: optimizeQuality;
+  max-width: none !important;
+  /* counteracts global img modification by twitter bootstrap library */
+  z-index: -2;
+}
+
+.vegas-overlay,
+.vegas-background {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /*# sourceMappingURL=style.css.map */
