--- a/content/themes/ac-inuk/assets/scss/style.scss
+++ b/content/themes/ac-inuk/assets/scss/style.scss
@@ -25,9 +25,11 @@
 @import "ui/base.scss";
 @import "ui/typography.scss";
 
+
 @import "ui/extentions/generic/mixins.scss";
 @import "ui/extentions/base/headings.scss";
 @import "ui/extentions/grid.scss";
+
 
 @import "ui/modules/site.scss";
 @import "ui/modules/header.scss";
@@ -57,4 +59,6 @@
 @import "ui/modules/wp-caption";
 
 @import "ui/states/is-empty";
+
+@import "ui/extentions/plugins/vegas";
 
