home page updates

--- a/content/themes/ac-inuk/assets/scss/style.scss
+++ b/content/themes/ac-inuk/assets/scss/style.scss
@@ -49,6 +49,7 @@
 @import "ui/modules/footer";
 @import "ui/modules/site-info";
 @import "ui/modules/multidropdown";
+@import "ui/modules/page-section";
 
 @import "ui/modules/navigation/responsive-toggle.scss";
 
