--- a/content/themes/ac-inuk/assets/scss/ui/modules/_site.scss
+++ b/content/themes/ac-inuk/assets/scss/ui/modules/_site.scss
@@ -11,9 +11,9 @@
   background: $brand-col-4;
 }
 .site__content{
-  padding: $base-spacing-unit 0;
+  padding: $base-spacing-unit 0 0;
 }
 .site__footer{
   padding: $base-spacing-unit 0;
-  background: $brand-col-3;
+  background: $brand-col-3--dark;
 }
