--- a/content/themes/ac-inuk/assets/css/style.css
+++ b/content/themes/ac-inuk/assets/css/style.css
@@ -57,11 +57,11 @@
 @color-secondary-1-3: #92310D;
 @color-secondary-1-4: #681C00;
 
-@color-secondary-2-0: #1A7C4F;	 Main Secondary color (2) 
-@color-secondary-2-1: #53A982;
-@color-secondary-2-2: #319065;
-@color-secondary-2-3: #09653B;
-@color-secondary-2-4: #004827;
+@color-primary-0: #186F66; 
+@color-primary-1: #4C9890;
+@color-primary-2: #2C8178;
+@color-primary-3: #085A52;
+@color-primary-4: #004039;
 
 @color-complement-0: #B37B26;	 Main Complement color 
 @color-complement-1: #F5C478;
@@ -3155,7 +3155,7 @@ body {
   }
 }
 
-.container, .header--master, .navigation--main, .content, .footer--master {
+.container, .header--master, .navigation--main, .footer--master, .page-section__content {
   width: auto;
   margin-left: auto;
   margin-right: auto;
@@ -3163,7 +3163,7 @@ body {
   padding-right: 12.5px;
 }
 @media only screen and (min-width: 1024px) {
-  .container, .header--master, .navigation--main, .content, .footer--master {
+  .container, .header--master, .navigation--main, .footer--master, .page-section__content {
     max-width: 70em;
     width: 90%;
   }
@@ -3339,12 +3339,12 @@ h6, .zeta {
 }
 
 .site__content {
-  padding: 25px 0;
+  padding: 25px 0 0;
 }
 
 .site__footer {
   padding: 25px 0;
-  background: #186f66;
+  background: #004039;
 }
 
 /*
@@ -3658,6 +3658,34 @@ and open the template in the editor.
 .navigation--main__menu .multi-dropdown ul li a, .navigation--main__menu .menu--site__menu-list ul li a {
   display: block;
   padding: 12.5px;
+}
+
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : 08-Dec-2014, 15:09:56
+    Author     : Richard
+*/
+.page-section__content {
+  padding: 25px 0;
+}
+
+.background--brand-col-1 {
+  background: #000;
+  color: white;
+}
+
+.background--brand-col-2 {
+  background: #5578A0;
+  color: white;
+}
+
+.background--brand-col-3 {
+  background: #4C9890;
+  color: white;
 }
 
 .menu--site .menu--responsive-toggle__toggle {
