--- a/content/themes/ac-inuk/assets/scss/_vars.scss
+++ b/content/themes/ac-inuk/assets/scss/_vars.scss
@@ -80,11 +80,11 @@ $base-line-height:  25px;
 @color-secondary-1-3: #92310D;
 @color-secondary-1-4: #681C00;
 
-@color-secondary-2-0: #1A7C4F;	 Main Secondary color (2) 
-@color-secondary-2-1: #53A982;
-@color-secondary-2-2: #319065;
-@color-secondary-2-3: #09653B;
-@color-secondary-2-4: #004827;
+@color-primary-0: #186F66; 
+@color-primary-1: #4C9890;
+@color-primary-2: #2C8178;
+@color-primary-3: #085A52;
+@color-primary-4: #004039;
 
 @color-complement-0: #B37B26;	 Main Complement color 
 @color-complement-1: #F5C478;
@@ -98,8 +98,8 @@ $mynt-blue--light: #5578A0;
 $mynt-blue--dark: #042244;
 
 $mynt-green: #186f66;
-$mynt-green--light: #53A982;
-$mynt-green--dark: #004827;
+$mynt-green--light: #4C9890;
+$mynt-green--dark: #004039;
 
 $brand-col-1: #000;
 $brand-col-2: $mynt-blue;
