--- a/content/themes/ac-inuk/assets/scss/style.scss
+++ b/content/themes/ac-inuk/assets/scss/style.scss
@@ -50,6 +50,7 @@
 @import "ui/modules/site-info";
 @import "ui/modules/multidropdown";
 @import "ui/modules/page-section";
+@import "ui/modules/option";
 
 @import "ui/modules/navigation/responsive-toggle.scss";
 
