--- a/content/themes/ac-inuk/assets/scss/_vars.scss
+++ b/content/themes/ac-inuk/assets/scss/_vars.scss
@@ -36,7 +36,7 @@ $use-island:        false;
 $use-block-list:    false;
 $use-matrix:        false;
 $use-split:         false;
-$use-this-or-this:  false;
+$use-this-or-this:  true;
 $use-link-complex:  false;
 $use-flyout:        false;
 $use-arrows:        false;
@@ -49,6 +49,7 @@ $use-stats:         false;
 $use-greybox:       false;
 
 
+$base-font-family:  'source sans pro';
 
 
 
@@ -59,8 +60,30 @@ $use-greybox:       false;
  * Place any variables that should override inuit.css’ defaults here.
  */
 
-$base-font-size:    17px;
-$base-line-height:  25px;
+$base-font-size:    25px;
+$base-line-height:  37px;
+
+/*------------------------------------*\
+    $FONT-SIZES
+\*------------------------------------*/
+/**
+ * Font-sizes (in pixels). Refer to relevant sections for their implementations.
+ */
+$giga-size:         96px;
+$mega-size:         72px;
+$kilo-size:         48px / 0.64;
+
+$h1-size:           36px / 0.64; // .alpha
+$h2-size:           30px / 0.64; // .beta
+$h3-size:           24px / 0.64; // .gamma
+$h4-size:           20px / 0.64; // .delta
+$h5-size:           16px / 0.64; // .epsilon
+$h6-size:           14px / 0.64; // .zeta
+
+$milli-size:        12px / 0.64;
+$micro-size:        10px / 0.64;
+
+
 /*------------------------------------*\
     $CUSTOM
 \*------------------------------------*/
@@ -68,25 +91,25 @@ $base-line-height:  25px;
  * Place any of your own variables that sit on top of inuit.css here.
  */
 /*
-@color-primary-0: #204875;	 Main Primary color 
+@color-primary-0: #204875;	 Main Primary color
 @color-primary-1: #5578A0;
 @color-primary-2: #355C88;
 @color-primary-3: #0F355F;
 @color-primary-4: #042244;
 
-@color-secondary-1-0: #B34C26;	 Main Secondary color (1) 
+@color-secondary-1-0: #B34C26;	 Main Secondary color (1)
 @color-secondary-1-1: #F59A78;
 @color-secondary-1-2: #D06C46;
 @color-secondary-1-3: #92310D;
 @color-secondary-1-4: #681C00;
 
-@color-primary-0: #186F66; 
+@color-primary-0: #186F66;
 @color-primary-1: #4C9890;
 @color-primary-2: #2C8178;
 @color-primary-3: #085A52;
 @color-primary-4: #004039;
 
-@color-complement-0: #B37B26;	 Main Complement color 
+@color-complement-0: #B37B26;	 Main Complement color
 @color-complement-1: #F5C478;
 @color-complement-2: #D09A46;
 @color-complement-3: #925E0D;
