--- a/content/themes/ac-inuk/assets/scss/ui/modules/_page-section.scss
+++ b/content/themes/ac-inuk/assets/scss/ui/modules/_page-section.scss
@@ -3,14 +3,41 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : 08-Dec-2014, 15:09:56
     Author     : Richard
 */
 
 .page-section__content{
   @extend .container;
-  padding: $base-spacing-unit 0 ;
+  padding: $base-spacing-unit * 6 0 $base-spacing-unit * 3;
+}
+.page-section__grid--left{
+  @extend .grid;
+}
+.page-section__grid--centre{
+  @extend .grid;
+  text-align: center;
+}
+.page-section__grid--right{
+  @extend .grid--rev;
+}
+
+.page-section__thumbnail{
+  @extend .desk-one-third;
+
+
+  img{
+    width: 100%;
+  }
+
+}
+.page-section__text{
+  @extend .desk-two-thirds;
+
+  .page-section__grid--centre &{
+    @extend .one-whole;
+  }
 }
 .background--brand-col-1{
   background: $brand-col-1;
@@ -24,3 +51,5 @@ and open the template in the editor.
   background: $brand-col-3--light;
   color: white;
 }
+
+
