--- a/content/themes/ac-inuk/assets/css/style.css
+++ b/content/themes/ac-inuk/assets/css/style.css
@@ -3809,9 +3809,37 @@ and open the template in the editor.
   background: #eee;
   padding: 1em;
   font-size: 0.6em;
+  border-bottom: solid 1px #ccc;
 }
 .option__header p {
   margin-bottom: 1em;
+}
+
+.options__price-info {
+  font-size: 1.2em;
+  margin-bottom: 1em;
+}
+
+.options__price--month {
+  display: block;
+  font-size: 2em;
+  margin-bottom: 0.2em;
+}
+.options__price--month small {
+  font-size: 60%;
+}
+
+.options__billing {
+  display: block;
+  margin-bottom: 0.5em;
+}
+
+.options__price--setup {
+  font-size: 1.2em;
+  display: block;
+}
+.options__price--setup small {
+  font-size: 60%;
 }
 
 .option__body {
@@ -3826,6 +3854,17 @@ and open the template in the editor.
 }
 .option__body dd {
   margin: 0;
+}
+.option__body dl {
+  transition: background 0.3s ease;
+  background: transparent;
+  border: dashed 1px #ccc;
+  padding: 0.4em 0;
+}
+.option__body dl:hover {
+  border: solid 1px #ddd;
+  padding: 0.4em 0;
+  background: #eee;
 }
 
 .menu--site .menu--responsive-toggle__toggle {
