--- a/content/themes/ac-inuk/assets/css/style.css
+++ b/content/themes/ac-inuk/assets/css/style.css
@@ -51,18 +51,21 @@
  * Place any of your own variables that sit on top of inuit.css here.
  */
 /*
+BLUE
 @color-primary-0: #204875;	 Main Primary color
 @color-primary-1: #5578A0;
 @color-primary-2: #355C88;
 @color-primary-3: #0F355F;
 @color-primary-4: #042244;
 
+RED
 @color-secondary-1-0: #B34C26;	 Main Secondary color (1)
 @color-secondary-1-1: #F59A78;
 @color-secondary-1-2: #D06C46;
 @color-secondary-1-3: #92310D;
 @color-secondary-1-4: #681C00;
 
+GREEN
 @color-primary-0: #186F66;
 @color-primary-1: #4C9890;
 @color-primary-2: #2C8178;
@@ -3431,7 +3434,7 @@ h6, .zeta {
 }
 
 .site__navigation--main {
-  background: #bbbbbb;
+  background: #b34c26;
 }
 
 .site__content {
@@ -3551,11 +3554,11 @@ h6, .zeta {
 .menu--site__menu-list a {
   text-decoration: none;
   color: black;
-  background: #bbbbbb;
+  background: #b34c26;
   text-decoration: none !important;
 }
 .menu--site__menu-list a:hover {
-  background: #a2a2a2;
+  background: #893a1d;
   text-decoration: none !important;
 }
 
@@ -3580,7 +3583,7 @@ h6, .zeta {
   padding: 18.5px;
   padding-bottom: 37px;
   margin-bottom: 37px;
-  border-bottom: solid 1px #bbbbbb;
+  border-bottom: solid 1px #b34c26;
 }
 .post .post__header {
   margin-bottom: 37px;
@@ -3749,7 +3752,7 @@ and open the template in the editor.
 }
 
 .navigation--main__menu .multi-dropdown ul, .navigation--main__menu .menu--site__menu-list ul {
-  background: #bbbbbb;
+  background: #b34c26;
   z-index: 999;
 }
 .navigation--main__menu .multi-dropdown ul li a, .navigation--main__menu .menu--site__menu-list ul li a {
@@ -3789,7 +3792,7 @@ and open the template in the editor.
 }
 
 .background--brand-col-3 {
-  background: #4c9890;
+  background: #f59a78;
   color: white;
 }
 
@@ -3801,8 +3804,15 @@ and open the template in the editor.
 }
 
 .option {
+  transition: box-shadow 0.3s ease, width 0.3s ease, font-size 0.3s ease;
   background: white;
   color: #333;
+  box-shadow: none;
+}
+.option:hover {
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+  width: 85%;
+  font-size: 1.05em;
 }
 
 .option__header {
@@ -3815,30 +3825,30 @@ and open the template in the editor.
   margin-bottom: 1em;
 }
 
-.options__price-info {
+.option__price-info {
   font-size: 1.2em;
   margin-bottom: 1em;
 }
 
-.options__price--month {
+.option__price--month {
   display: block;
   font-size: 2em;
   margin-bottom: 0.2em;
 }
-.options__price--month small {
+.option__price--month small {
   font-size: 60%;
 }
 
-.options__billing {
+.option__billing {
   display: block;
   margin-bottom: 0.5em;
 }
 
-.options__price--setup {
+.option__price--setup {
   font-size: 1.2em;
   display: block;
 }
-.options__price--setup small {
+.option__price--setup small {
   font-size: 60%;
 }
 
@@ -3856,6 +3866,7 @@ and open the template in the editor.
   margin: 0;
 }
 .option__body dl {
+  position: relative;
   transition: background 0.3s ease;
   background: transparent;
   border: dashed 1px #ccc;
@@ -3865,6 +3876,15 @@ and open the template in the editor.
   border: solid 1px #ddd;
   padding: 0.4em 0;
   background: #eee;
+}
+
+.option__icon {
+  height: 1.2em;
+  left: 0.5em;
+  position: absolute;
+  top: 0.5em;
+  width: 1.2em;
+  fill: #92310d;
 }
 
 .menu--site .menu--responsive-toggle__toggle {
