--- a/content/themes/ac-inuk/assets/scss/style.scss
+++ b/content/themes/ac-inuk/assets/scss/style.scss
@@ -51,10 +51,15 @@
 @import "ui/modules/multidropdown";
 @import "ui/modules/page-section";
 @import "ui/modules/option";
+@import "ui/modules/contact";
 
 @import "ui/modules/navigation/responsive-toggle.scss";
+@import "ui/modules/navigation/menu.scss";
 
 @import "ui/modules/MultiDropdown/multidropdown";
+
+
+
 
 @import "ui/modules/widgets/widget_search";
 @import "ui/modules/widgets/widget_calendar";
