--- a/content/themes/ac-inuk/assets/scss/ui/_typography.scss
+++ b/content/themes/ac-inuk/assets/scss/ui/_typography.scss
@@ -8,5 +8,6 @@
  * Set relative bottom margin
  */
 @include headings(){
-  margin-bottom: 0em;
+  margin-bottom: 0.5em;
+  line-height: 1.2 !important;
 }
