--- a/content/themes/ac-inuk/assets/scss/ui/modules/_header--master.scss
+++ b/content/themes/ac-inuk/assets/scss/ui/modules/_header--master.scss
@@ -11,4 +11,31 @@
   overflow: hidden;
 
 }
+.header--master__widget-area{
+  .menu{
+    a{
+      transition: padding 0.3s ease,
+        font 0.3s ease;
+    }
+  }
+  .is-sticky &{
+    width: 100%;
+    left: 0;
+    background: rgba(#000, 0.2);
+    padding: 0.5em 0;
+    .menu{
+      margin-bottom: 0;
+      a{
+        padding: 0.5em;
+        font-size: 0.6em;
+      }
+    }
+    .menu-item{
+      margin-bottom: 0;
+    }
+    .widget{
+      margin-bottom: 0;
+    }
+  }
+}
 
