--- a/content/themes/ac-inuk/assets/scss/ui/modules/_site-info.scss
+++ b/content/themes/ac-inuk/assets/scss/ui/modules/_site-info.scss
@@ -10,4 +10,9 @@ and open the template in the editor.
 
 .site-info{
   text-align: center;
+  color: #fff;
+}
+.site-info__logo{
+  display: inline !important;
+  width: 4em;
 }
